--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/deno": "^4.2.0",
-    "astro": "^2.7.2"
+    "@astrojs/deno": "4.2.0",
+    "astro": "2.8.0",
+    "eslint": "^8.44.0",
+    "prettier": "3.0.0"
   }
 }
