--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
     "semi": false,
-    "trailingComma": "es5",
     "useTabs": true,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "printWidth": 100
 }
