--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/deno": "5.0.0",
+    "@astrojs/tailwind": "^5.0.0",
     "astro": "3.0.12",
     "eslint": "^8.46.0",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "tailwindcss": "^3.0.24"
   }
 }
