--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@astrojs/deno": "4.3.0",
     "astro": "2.10.5",
-    "eslint": "^8.46.0",
-    "prettier": "3.0.1"
+    "eslint": "8.46.0"
   }
 }
