fix package.json again + did some small changes

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
-    "astro": "astro"
+    "dev": "npx astro dev",
+    "start": "npx astro dev",
+    "build": "npx astro build",
+    "preview": "npx deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
+    "astro": "npx astro"
   },
   "dependencies": {
     "@astrojs/deno": "5.0.0",
