--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@astrojs/deno": "5.0.0",
     "@astrojs/tailwind": "^5.0.0",
-    "astro": "3.1.0",
-    "eslint": "^8.46.0",
-    "prettier": "3.0.3",
-    "tailwindcss": "^3.0.24"
+    "astro": "3.1.2",
+    "tailwindcss": "^3.3.3",
+    "prettier": "3.0.3"
   }
 }
