--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "astro": "npx astro"
   },
   "dependencies": {
-    "@astrojs/deno": "5.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "3.1.2",
-    "tailwindcss": "^3.3.3",
+    "@astrojs/deno": "5.0.1",
+    "@astrojs/tailwind": "5.0.2",
+    "astro": "3.3.2",
+    "tailwindcss": "3.3.3",
     "prettier": "3.0.3"
   }
 }
