--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-	"name": "greenfrogdev",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "npx astro dev",
-		"start": "npx astro dev",
-		"build": "npx astro build",
-		"preview": "npx deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
-		"astro": "npx astro"
-	},
-	"dependencies": {
-		"@astrojs/deno": "5.0.1",
-		"@astrojs/tailwind": "5.1.0",
-		"astro": "4.5.12",
-		"tailwindcss": "3.4.3",
-		"prettier": "3.2.5"
-	}
+  "name": "greenfrogdev",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "npx astro dev",
+    "start": "npx astro dev",
+    "build": "npx astro build",
+    "preview": "npx deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
+    "astro": "npx astro"
+  },
+  "dependencies": {
+    "@astrojs/deno": "5.0.1",
+    "@astrojs/tailwind": "5.1.0",
+    "@midudev/tailwind-animations": "^0.0.7",
+    "astro": "4.5.12",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.3"
+  }
 }
